# trigger-control

./: .gitignore  CMakeLists.txt  DebugMakefile  LICENSE  Makefile  README.md  WindowsMakefile  compile.sh  debug-compile.sh  icon.h  imgui.ini  trigger-control  trigger-control.cpp  windows-compile.sh  windows.cmake
.github/workflows/: build.yml
imgui/: ImGuiFileDialog.cpp  imfilebrowser.h  imgui_impl_win32.cpp  imgui_impl_win32.h
libtrigger-control/: ds-trigger-control.cpp  ds-trigger-control.h
